minor layout adjustments: fixed vertical alignment of areas in the menubar in firefox, fixed font size of tabs in the site area in IE
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@419508 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapp/lenya/resources/css/tabs.css
+++ b/src/webapp/lenya/resources/css/tabs.css
@@ -56,7 +56,7 @@
 .lenya-tablink, .lenya-tablink-active {
   position: relative;
   left: 1px;
-  font-size: 10pt;
+  font-size: small;
   display: block;
   margin-bottom: .2em;
   padding: .2em 1em .2em .3em;
